# Generative_AI_With_LLMs

./: .gitignore  README.md  pyproject.toml  requirements.txt
week1/: prompt_engineering_lab.ipynb
week2/: fine_tuning_lab1.ipynb
week3/: fine_tune_flant5_lab.ipynb
